# FoxZero

./: .gitignore  FoxZero_Colab_Exploration.ipynb  bench_callback.py  bench_cpu.py  bench_mps.py  bench_onnx.py  bench_onnx_3000.py  run_experiments.sh  setup.py  test_mcts.py  verify_cpp_binding.py
7Game/: CMakeLists.txt  Compliance_Report.md  FoxZero.md  README.md
7Game/include/: Card.h  ComputerPlayer.h  Deck.h  Hand.h  HumanPlayerCLI.h  PlacedSuit.h  Player.h  SevensGame.h  SevensGameCLI.h
7Game/src/: Card.cpp  ComputerPlayer.cpp  Deck.cpp  Hand.cpp  HumanPlayerCLI.cpp  PlacedSuit.cpp  SevensGame.cpp  SevensGameCLI.cpp  main.cpp
7Game/src/main/java/sevens/: Application.java
7Game/src/main/java/sevens/model/carddeck/: Card.java  Deck.java  Hand.java
7Game/src/main/java/sevens/model/game/: PlacedSuit.java  SevensGame.java
7Game/src/main/java/sevens/model/players/: ComputerPlayer.java  Player.java
7Game/src/main/java/sevens/views/cli/: HumanPlayerCLI.java  SevensGameCLI.java
docs/: README_foxzero.md  Web_Analysis_Tool_zh.md
foxzero/: analysis.py  app.py  card.py  common.py  evaluate.py  game.py  generator.py  mcts.py  model.py  parallel_training_guide.md  play.py  sevens_python.cpp  train.py  train_colab.py  train_parallel.py  trainer.py  web_app.py
foxzero/templates/: index.html  play.html
scripts/: run_experiments.sh  verify_cpp_binding.py
tests/: test_game.py  test_mcts.py  test_model.py
